specification/specs/common_abstractions/response/IResponse.ts
interface IResponse {
	// error: MainError;
  // status: integer;
}
